--- a/women_dresses.html
+++ b/women_dresses.html
@@ -7,9 +7,9 @@
 
 
 <div class="image1"> 
-<a href="add_cart_f_l_b_d.html"><img src="frayen_linen_blend_dress.jpg" alt="Image">
+<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" alt="Image">
 <br>
-Frayen Linen Blend Dress</a>
+Frayed Linen Blend Dress</a>
 </div>
 
 <div class="image2">
