--- a/women_dresses.html
+++ b/women_dresses.html
@@ -7,7 +7,7 @@
 
 
 <div class="image1"> 
-<a href="add_cart_f_l_b_d" class="btn"><img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" alt="Image">
+<a href="add_cart_f_l_b_d.html" class="btn"><img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" alt="Image">
   <span>+ Add to Wish List</span></a>
 
 <br>
