--- a/women_dresses.html
+++ b/women_dresses.html
@@ -11,6 +11,10 @@
   <span>+ Add to Wish List</span></a>
 
 <br>
+   <input id="productQuantity" type="hidden" name="quantity" value="1"/>
+ <input id="productId" type="hidden" name="product_id" value="91801160"/>
+ <input id="productName" type="hidden" name="product_name" value="Red Hat"/>
+ <div class="cta" id="addit"><a class="getstarted-button">Add to Cart!</a></div>
 Frayed Linen Blend Dress</a>
 </div>
 
