--- a/women_dresses.html
+++ b/women_dresses.html
@@ -6,9 +6,10 @@
   <body background="http://img.as-creation.com/app/items/s/935455.jpg">
 
 <table><tr><td>
- <img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" alt="Image">
+ <img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330"  width="300" height="400" alt="Image">
 </td><td>
-  <img src="https://s-media-cache-ak0.pinimg.com/originals/e1/6a/de/e16adeb38ba2f68d65b3fd282fc9680e.jpg" alt="Image2">
+  <img src="https://s-media-cache-ak0.pinimg.com/originals/e1/6a/de/e16adeb38ba2f68d65b3fd282fc9680e.jpg"  width="300" height="400"
+       alt="Image2">
 </td></tr></table>
 <div class="image1"> 
 <a href="add_cart_f_l_b_d.html"><img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" alt="Image">
