--- a/women_dresses.html
+++ b/women_dresses.html
@@ -7,25 +7,15 @@
 
 <table><tr><td>
  <img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330"  width="300" height="300" alt="Image">
+  <br>
+  <p>Frayed Linen Blend Dress</p>
 </td><td>
   <img src="https://s-media-cache-ak0.pinimg.com/originals/e1/6a/de/e16adeb38ba2f68d65b3fd282fc9680e.jpg"  width="300" height="400"
        alt="Image2">
+  <br>
+  <p>Seductive Satin Gown</p>
 </td></tr></table>
-<div class="image1"> 
-<a href="add_cart_f_l_b_d.html"><img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" alt="Image">
-  
 
-
-<br>
-  
-Frayed Linen Blend Dress</a>
-</div>
-
-<div class="image2">
-<a href="add_cart_s_s_g.html"><img src="seductive_satin_gown.jpg" width="300" height="400" alt="Image2">
-<br>
-Seductive Satin Gown</a>
-</div>
 
 <script>
       function goBack() {
