--- a/women_dresses.html
+++ b/women_dresses.html
@@ -4,18 +4,23 @@
 </head>
 
   <body background="http://img.as-creation.com/app/items/s/935455.jpg">
-    <p><center>Women Dresses</center></p>
+    <h1 id="wo_dr"><center>Women Dresses</center></h1>
     
-<table><tr><td>
+<table>
+  <tr>
+    <td>
  <img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330"  width="300" height="300" alt="Image">
   <br>
   <p>Frayed Linen Blend Dress</p>
-</td><td>
+</td>
+    <td>
   <img src="https://s-media-cache-ak0.pinimg.com/originals/e1/6a/de/e16adeb38ba2f68d65b3fd282fc9680e.jpg"  width="300" height="400"
        alt="Image2">
   <br>
   <p>Seductive Satin Gown</p>
-</td></tr></table>
+</td>
+  </tr>
+    </table>
 
 
 <script>
