--- a/women_dresses.html
+++ b/women_dresses.html
@@ -21,7 +21,9 @@
 </td>
   </tr>
     </table>
-
+<a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
+<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" />
+</a>
 
 <script>
       function goBack() {
@@ -30,9 +32,6 @@
     </script>
 
     <button onclick="goBack()">Go Back</button>
-
-    <p>Notice that clicking on the Back button here will not result in any action, because there is no previous URL in the history list.</p>
-
   
 
   </body>
