--- a/women_dresses.html
+++ b/women_dresses.html
@@ -9,21 +9,22 @@
 <table>
   <tr>
     <td>
- <img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330"  width="300" height="300" alt="Image">
+      <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
+<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" />
+</a>
   <br>
-  <p>Frayed Linen Blend Dress</p>
+  <h2>Frayed Linen Blend Dress</h2>
 </td>
     <td>
-  <img src="https://s-media-cache-ak0.pinimg.com/originals/e1/6a/de/e16adeb38ba2f68d65b3fd282fc9680e.jpg"  width="300" height="400"
-       alt="Image2">
+      <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
+<img src="https://s-media-cache-ak0.pinimg.com/originals/e1/6a/de/e16adeb38ba2f68d65b3fd282fc9680e.jpg" />
+</a>
   <br>
   <p>Seductive Satin Gown</p>
 </td>
   </tr>
     </table>
-<a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" />
-</a>
+
 
 <script>
       function goBack() {
