--- a/women_dresses.html
+++ b/women_dresses.html
@@ -13,14 +13,14 @@
 <img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" width="300" height="300" alt="Image1"/>
 </a>
   <br>
-  <h2>Frayed Linen Blend Dress</h2>
+  <h3>Frayed Linen Blend Dress</h3>
 </td>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
 <img src="https://s-media-cache-ak0.pinimg.com/originals/e1/6a/de/e16adeb38ba2f68d65b3fd282fc9680e.jpg" width="300" height="400" alt="Image2" />
 </a>
   <br>
-  <p>Seductive Satin Gown</p>
+  <h3>Seductive Satin Gown</h3>
 </td>
   </tr>
     </table>
