--- a/women_dresses.html
+++ b/women_dresses.html
@@ -6,6 +6,7 @@
   <body background="http://img.as-creation.com/app/items/s/935455.jpg">
     <h1 id="wo_dr"><center>Women Dresses</center></h1>
     
+    <h2>Click on an image to add the item to your wishlist</h2>
 <table>
   <tr>
     <td>
