--- a/men_sweatshirts.html
+++ b/men_sweatshirts.html
@@ -4,16 +4,14 @@
 </head>
 
   <body background="http://img.as-creation.com/app/items/s/935455.jpg">
-    <h1 id="wo_dr"><center>Women Dresses</center></h1>
+    <h1 id="wo_dr"><center>Men Sweatshirts</center></h1>
     
     <h2>Click on an image to add the item to your wishlist</h2>
 <table>
   <tr>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-
-          catalog/default/dwf3e647c7/original/90_A71806-A221204_A494_10_PaintedBaroque
-          Sweatshirt-Sweatshirts-versace-online-store_0_2.png?sw=400&sh=561&sm=fit" width="300" height="300" alt="Image3"/>
+<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dwf3e647c7/original/90_A71806-A221204_A494_10_PaintedBaroqueSweatshirt-Sweatshirts-versace-online-store_0_2.png?sw=400&sh=561&sm=fit" width="300" height="300" alt="Image3"/>
 </a>
   <br>
   <h3>Painted Baroque Sweatshirt</h3>
