--- a/men_trousers.html
+++ b/men_trousers.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Made with Thimble</title>
 </head>
-<body background ="http://img.as-creation.com/app/items/s/935455.jpg">
-<div class="image3">
-<a href="add_cart_c_t_m_g.html"><img src="casual_trouser_military_green.jpg">
-<br>
-Casual Trouser Military Green</a>
-</div>
 
-</body>
+  <body background="http://img.as-creation.com/app/items/s/935455.jpg">
+    <h1 id="wo_dr"><center>Men Trousers & Jeans</center></h1>
+    
+    <h2>Click on an image to add the item to your wishlist</h2>
+<table>
+  <tr>
+    <td>
+      <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
+<img src="https://product.nuji.com/medium/24658ff3-e271-4a8f-887c-7621c361a0fb.jpg" width="300" height="400" alt="Image3"/>
+</a>
+  <br>
+  <h3>Casual Trousers Beige</h3>
+</td>
+    <td>
+      <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
+<img src="https://images-na.ssl-images-amazon.com/images/I/41ChLGhRSUL._AC_UL260_SR200,260_.jpg" width="300" height="400" alt="Image4" />
+</a>
+  <br>
+  <h3>Light Blue Jeans</h3>
+</td>
+  </tr>
+    </table>
+
+
+<script>
+      function goBack() {
+        window.history.back();
+      }
+    </script>
+
+    <button onclick="goBack()">Go Back</button>
+  
+
+  </body>
 </html>
