--- a/women_trousers.html
+++ b/women_trousers.html
@@ -4,7 +4,7 @@
 </head>
 
   <body background="http://img.as-creation.com/app/items/s/935455.jpg">
-    <h1 id="wo_dr"><center>Women Trousers & Jeans</center></h1>
+    <h1 id="wo_dr"><center>Women's Trousers & Jeans</center></h1>
     
     <h2>Click on an image to add the item to your wishlist</h2>
 <table>
