--- a/women_dresses.html
+++ b/women_dresses.html
@@ -11,17 +11,17 @@
   <tr>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=200002330" width="300" height="300" alt="Image1"/>
+<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dw70a15b61/original/90_A76942-A220848_A1008_10_EmbroideredCrystalMeshDress-Dresses-versace-online-store_0_0.png?sw=400&sh=561&sm=fit" width="300" height="400" alt="Image1"/>
 </a>
   <br>
-  <h3>Frayed Linen Blend Dress</h3>
+  <h3>Embroidered Crystal Mesh Dress</h3>
 </td>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="https://s-media-cache-ak0.pinimg.com/originals/e1/6a/de/e16adeb38ba2f68d65b3fd282fc9680e.jpg" width="300" height="400" alt="Image2" />
+<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dw3e2bf040/original/90_A76928-A221888_A1386_10_RuchedSilkDress-Dresses-versace-online-store_1_0.png?sw=400&sh=561&sm=fit" width="300" height="400" alt="Image2" />
 </a>
   <br>
-  <h3>Seductive Satin Gown</h3>
+  <h3>Ruched Silk Dress</h3>
 </td>
   </tr>
     </table>
