--- a/hc_bowls.html
+++ b/hc_bowls.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-<p>bowls</p>
 </head>
-<body background="http://img.as-creation.com/app/items/s/935455.jpg">
+
+  <body background="http://img.as-creation.com/app/items/s/935455.jpg">
+    <h1 id="wo_dr"><center>Bowls & Trays</center></h1>
+    
+    <h2>Click on an image to add the item to your wishlist</h2>
+<table>
+  <tr>
+    <td>
+      <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
+<img src="https://images.bloomingdales.com/is/image/BLM/products/0/optimized/8092690_fpx.tif?wid=1200&qlt=90,0&layer=comp&op_sharpen=0&resMode=sharp2&op_usm=0.7,1.0,0.5,0&fmt=jpeg" width="300" height="400" alt="Image9"/>
+</a>
+  <br>
+  <h3>Asian Dream Open Vegetable Bowl</h3>
+</td>
+    <td>
+      <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
+<img src="https://www.unlimitedfurnituregroup.com/media/catalog/product/cache/1/image/1200x1200/9df78eab33525d08d6e5fb8d27136e95/6/9/69012-320628-47516.jpg" width="300" height="400" alt="Image10" />
+</a>
+  <br>
+  <h3>Medusa Prisma Clear Ashtray</h3>
+</td>
+  </tr>
+    </table>
+
+
 <script>
       function goBack() {
         window.history.back();
       }
     </script>
- <button onclick="goBack()">Go Back</button>
-</body>
+
+    <button onclick="goBack()">Go Back</button>
+  
+
+  </body>
 </html>
