--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <body>
-    <h1>Versace</h1>
+    <h1><center>Versace</center></h1>
         <ul>
   <div class="container">
     <div class="dropdown_001">
