--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <iframe width="560" height="315" class="center" src="https://www.youtube.com/embed/SWUTk8blWLA" frameborder="40" allowfullscreen></iframe>
 
 <form method="get" action="/page2">
-    <button type="submit"><a href="subscribe.html">Subscribe to our newsletter!</a></button>
+    <button type="submit" id="sub_index"><a href="subscribe.html">Subscribe to our newsletter!</a></button>
 </form>
 
 </body>
