--- a/subscribe.html
+++ b/subscribe.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <style>
+        #sub {
         @keyframes button-loading {
 
     0% {
@@ -260,7 +261,7 @@ E-mail adress:
 <br>
 <br>
 
-<button onclick="myFunction()">Subscribe</button>
+<button id="sub" onclick="myFunction()">Subscribe</button>
 
 <script>
 function myFunction() {
