--- a/subscribe.html
+++ b/subscribe.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        #sub
+        .button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+    </style>
 </head>
 <body background="http://img.as-creation.com/app/items/s/935455.jpg">
 <p>Type in your personal information to subscribe</p>
