--- a/subscribe.html
+++ b/subscribe.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <style>
-        #sub
-        .button {
+        .sub {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
@@ -35,7 +34,7 @@ E-mail adress:
 <br>
 <br>
 
-<button id="sub" onclick="myFunction()">Subscribe</button>
+<button class="sub" onclick="myFunction()">Subscribe</button>
 
 <script>
 function myFunction() {
