--- a/subscribe.html
+++ b/subscribe.html
@@ -3,9 +3,11 @@
 <head>
     <style>
         .sub {
-    background-color: #4CAF50; /* Green */
-    border: none;
+    background-color: #4E4847; /* Black */
+    border-style: solid;
+    border-color: white;
     color: white;
+    font-style: Serif;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
