--- a/subscribe.html
+++ b/subscribe.html
@@ -7,7 +7,7 @@
     border-style: solid;
     border-color: white;
     color: white;
-    font face: Serif;
+    font face: "Serif";
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
