--- a/subscribe.html
+++ b/subscribe.html
@@ -7,7 +7,7 @@
     border-style: solid;
     border-color: white;
     color: white;
-    font-famikly: Serif;
+    font-family: Serif;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body background="http://img.as-creation.com/app/items/s/935455.jpg">
-<p>Type in your personal information to subscribeTEST2222</p>
+<p>Type in your personal information to subscribeTEST2222qw4nlrkw2</p>
 
 <form>
 First name :
