--- a/subscribe.html
+++ b/subscribe.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body background="http://img.as-creation.com/app/items/s/935455.jpg">
-<p>Type in your personal information to subscribeTEST2222qw4nlrkw2</p>
+<p>Type in your personal information to subscribe</p>
 
 <form>
 First name :
