--- a/subscribe.html
+++ b/subscribe.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body background="http://img.as-creation.com/app/items/s/935455.jpg">
-<p>Type in your personal information to subscribe</p>
+    <h1><center>Type in your personal information to subscribe</center></h1>
 
 <form>
     <div class="form">
