--- a/subscribe.html
+++ b/subscribe.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <style>
+        h1 {
+            font-family: Serif;
+        }
+        h3 {
+            font-family: Serif;
+        }
         .form {
             text-align: center;
         }
@@ -24,17 +30,17 @@
 
 <form>
     <div class="form">
-First name :
+        <h3>First name :</h3>
 <br>
 <input type="text" name="firstname">
 <br>
 <br>
-Last name:
+        <h3>Last name :</h3>
 <br>
 <input type="text" name="lastname">
 <br>
 <br>
-E-mail adress:
+        <h3>E-mail adress :</h3>
 <br>
 <input type="text" name"email">
 <br>
