--- a/subscribe.html
+++ b/subscribe.html
@@ -3,7 +3,9 @@
 <head>
     <style>
         h1 {
-            font-family: Serif;
+  font: 400 130px/0.8 'Great Vibes', Helvetica, sans-serif;
+  color: #fff;
+  text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
         }
         h3 {
             font-family: Serif;
@@ -31,17 +33,14 @@
 <form>
     <div class="form">
         <h3>First name :</h3>
-<br>
 <input type="text" name="firstname">
 <br>
 <br>
         <h3>Last name :</h3>
-<br>
 <input type="text" name="lastname">
 <br>
 <br>
         <h3>E-mail adress :</h3>
-<br>
 <input type="text" name"email">
 <br>
 <br>
