--- a/subscribe.html
+++ b/subscribe.html
@@ -3,9 +3,7 @@
 <head>
     <style>
         h1 {
-  font: 400 130px/0.8 'Great Vibes', Helvetica, sans-serif;
-  color: #fff;
-  text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
+            font-family: "Bodoni MT";
         }
         h3 {
             font-family: Serif;
