--- a/subscribe.html
+++ b/subscribe.html
@@ -6,7 +6,7 @@
             font-family: "Bodoni MT";
         }
         h3 {
-            font-family: Serif;
+            font-family: "Bodoni MT";
         }
         .form {
             text-align: center;
@@ -16,7 +16,7 @@
     border-style: solid;
     border-color: white;
     color: white;
-    font-family: Serif;
+    font-family: "Bodoni MT";
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -38,7 +38,7 @@
 <input type="text" name="lastname">
 <br>
 <br>
-        <h3>E-mail adress :</h3>
+        <h3>E-mail address :</h3>
 <input type="text" name"email">
 <br>
 <br>
