--- a/men_sweatshirts.html
+++ b/men_sweatshirts.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    h1 {
+      font-family: "Bodoni MT";
+    }
+    
+    h2 {
+      font-family: "Bodoni MT";
+    }
+    
+    h3 {
+      font-family: "Bodoni MT";
+    }
+    </style>
 </head>
 
   <body background="http://img.as-creation.com/app/items/s/935455.jpg">
