--- a/hc_bowls.html
+++ b/hc_bowls.html
@@ -13,6 +13,10 @@
     h3 {
       font-family: "Bodoni MT";
     }
+    
+    #i9 {
+      border-style: dotted;
+    }
     </style>
     
 </head>
@@ -25,7 +29,7 @@
   <tr>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="https://images.bloomingdales.com/is/image/BLM/products/0/optimized/8092690_fpx.tif?wid=1200&qlt=90,0&layer=comp&op_sharpen=0&resMode=sharp2&op_usm=0.7,1.0,0.5,0&fmt=jpeg" width="300" height="300" alt="Image9"/>
+<img src="https://images.bloomingdales.com/is/image/BLM/products/0/optimized/8092690_fpx.tif?wid=1200&qlt=90,0&layer=comp&op_sharpen=0&resMode=sharp2&op_usm=0.7,1.0,0.5,0&fmt=jpeg" id="i9" width="300" height="300" alt="Image9"/>
 </a>
   <br>
   <h3>Asian Dream Open Vegetable Bowl</h3>
