--- a/men_sweatshirts.html
+++ b/men_sweatshirts.html
@@ -13,6 +13,16 @@
     h3 {
       font-family: "Bodoni MT";
     }
+    
+    #i15 {
+      border-style: double;
+      border-color: black;
+    }
+    
+    #i6 {
+      border-style: double;
+      border-color: black;
+    }
     </style>
 </head>
 
@@ -24,14 +34,14 @@
   <tr>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dwf3e647c7/original/90_A71806-A221204_A494_10_PaintedBaroqueSweatshirt-Sweatshirts-versace-online-store_0_2.png?sw=400&sh=561&sm=fit" width="300" height="400" alt="Image5"/>
+<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dwf3e647c7/original/90_A71806-A221204_A494_10_PaintedBaroqueSweatshirt-Sweatshirts-versace-online-store_0_2.png?sw=400&sh=561&sm=fit" id="i5" width="300" height="400" alt="Image5"/>
 </a>
   <br>
   <h3>Painted Baroque Sweatshirt</h3>
 </td>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="https://cdn.fashiola.co.uk/L330560503/men-sweatshirts-versace-jeans-floral-logo-sweatshirt.jpg" width="300" height="400" alt="Image6" />
+<img src="https://cdn.fashiola.co.uk/L330560503/men-sweatshirts-versace-jeans-floral-logo-sweatshirt.jpg" id="i6" width="300" height="400" alt="Image6" />
 </a>
   <br>
   <h3>Jeans Floral Logo Sweatshirt</h3>
