--- a/men_trousers.html
+++ b/men_trousers.html
@@ -13,6 +13,16 @@
     h3 {
       font-family: "Bodoni MT";
     }
+    
+    #i3 {
+      border-style: double;
+      border-color: black;
+    }
+    
+    #i4 {
+      border-style: double;
+      border-color: black;
+    }
     </style>
 </head>
 
@@ -24,14 +34,14 @@
   <tr>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="https://product.nuji.com/medium/24658ff3-e271-4a8f-887c-7621c361a0fb.jpg" width="300" height="400" alt="Image3"/>
+<img src="https://product.nuji.com/medium/24658ff3-e271-4a8f-887c-7621c361a0fb.jpg" id="i3" width="300" height="400" alt="Image3"/>
 </a>
   <br>
   <h3>Casual Trousers Beige</h3>
 </td>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="https://images-na.ssl-images-amazon.com/images/I/41ChLGhRSUL._AC_UL260_SR200,260_.jpg" width="300" height="400" alt="Image4" />
+<img src="https://images-na.ssl-images-amazon.com/images/I/41ChLGhRSUL._AC_UL260_SR200,260_.jpg" id="i4" width="300" height="400" alt="Image4" />
 </a>
   <br>
   <h3>Light Blue Jeans</h3>
