--- a/women_dresses.html
+++ b/women_dresses.html
@@ -13,6 +13,16 @@
     h3 {
       font-family: "Bodoni MT";
     }
+    
+    #i1 {
+      border-style: double;
+      border-color: black;
+    }
+    
+    #i2 {
+      border-style: double;
+      border-color: black;
+    }
     </style>
 </head>
 
@@ -24,14 +34,14 @@
   <tr>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dw70a15b61/original/90_A76942-A220848_A1008_10_EmbroideredCrystalMeshDress-Dresses-versace-online-store_0_0.png?sw=400&sh=561&sm=fit" width="300" height="400" alt="Image1"/>
+<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dw70a15b61/original/90_A76942-A220848_A1008_10_EmbroideredCrystalMeshDress-Dresses-versace-online-store_0_0.png?sw=400&sh=561&sm=fit" id="i1" width="300" height="400" alt="Image1"/>
 </a>
   <br>
   <h3>Embroidered Crystal Mesh Dress</h3>
 </td>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dw3e2bf040/original/90_A76928-A221888_A1386_10_RuchedSilkDress-Dresses-versace-online-store_1_0.png?sw=400&sh=561&sm=fit" width="300" height="400" alt="Image2" />
+<img src="http://demandware.edgesuite.net/sits_pod37/dw/image/v2/ABAO_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dw3e2bf040/original/90_A76928-A221888_A1386_10_RuchedSilkDress-Dresses-versace-online-store_1_0.png?sw=400&sh=561&sm=fit" id="i2" width="300" height="400" alt="Image2" />
 </a>
   <br>
   <h3>Ruched Silk Dress</h3>
