--- a/young_girls.html
+++ b/young_girls.html
@@ -13,6 +13,16 @@
     h3 {
       font-family: "Bodoni MT";
     }
+    
+    #i11 {
+      border-style: double;
+      border-color: black;
+    }
+    
+    #i12 {
+      border-style: double;
+      border-color: black;
+    }
     </style>
 </head>
 
@@ -24,14 +34,14 @@
   <tr>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="https://cdn.childrensalon.com/media/catalog/product/cache/0/image/1000x1000/9df78eab33525d08d6e5fb8d27136e95/y/o/young-versace-baby-girls-gold-baroque-print-dress-110879-305b7e970ef69ce20cefb4739a2f2645a4ede094.jpg" width="300" height="300" alt="Image11"/>
+<img src="https://cdn.childrensalon.com/media/catalog/product/cache/0/image/1000x1000/9df78eab33525d08d6e5fb8d27136e95/y/o/young-versace-baby-girls-gold-baroque-print-dress-110879-305b7e970ef69ce20cefb4739a2f2645a4ede094.jpg" id="i11" width="300" height="300" alt="Image11"/>
 </a>
   <br>
   <h3>Baroque Print Dress</h3>
 </td>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
-<img src="https://cdn.childrensalon.com/media/catalog/product/cache/0/image/1000x1000/9df78eab33525d08d6e5fb8d27136e95/y/o/young-versace-girls-white-gold-stud-gladiator-sandals-125900-0ce8909e3730d214f1f3a39571eb31c3bfce90ff.jpg" width="300" height="300" alt="Image12" />
+<img src="https://cdn.childrensalon.com/media/catalog/product/cache/0/image/1000x1000/9df78eab33525d08d6e5fb8d27136e95/y/o/young-versace-girls-white-gold-stud-gladiator-sandals-125900-0ce8909e3730d214f1f3a39571eb31c3bfce90ff.jpg" id="i12" width="300" height="300" alt="Image12" />
 </a>
   <br>
   <h3> White & Gold Stud Gladiator Sandals</h3>
