--- a/young_boys.html
+++ b/young_boys.html
@@ -37,7 +37,7 @@
 <img src="https://cdn.childrensalon.com/media/catalog/product/cache/0/image/1000x1000/9df78eab33525d08d6e5fb8d27136e95/y/o/young-versace-boys-black-medusa-logo-polo-shirt-125665-c83cfd09edd1a9f79d6ce17a0685d37f7c5131d5.jpg" id="i11" width="300" height="300" alt="Image11"/>
 </a>
   <br>
-  <h3>Black medusa Logo</h3>
+  <h3>Black Medusa Logo</h3>
 </td>
     <td>
       <a href='javascript:onClick=alert("You have added this item to your wishlist.")'>
