--- a/subscribe.html
+++ b/subscribe.html
@@ -24,33 +24,25 @@
     font-size: 20px;
 }
     </style>
+    <script>
+function validateForm() {
+    var x = document.forms["myForm"]["fname"].value;
+    if (x == "") {
+        alert("Name must be filled out");
+        return false;
+    }
+}
+</script>
 </head>
 <body background="http://img.as-creation.com/app/items/s/935455.jpg">
     <h1><center>Type in your personal information to subscribe</center></h1>
+<form name="myForm" action="/action_page_post.php"
+onsubmit="return validateForm()" method="post">
+Name: <input type="text" name="fname">
+<input type="submit" value="Submit">
+</form>
 
-<form>
-    <div class="form">
-        <h3>First name :</h3>
-<input type="text" name="firstname">
-<br>
-<br>
-        <h3>Last name :</h3>
-<input type="text" name="lastname">
-<br>
-<br>
-        <h3>E-mail address :</h3>
-<input type="text" name"email">
-<br>
-<br>
 
-<button class="sub" onclick="myFunction()">Subscribe</button>
-    </div>
-
-<script>
-function myFunction() {
-    alert("Thank you for subscribing to our newsletter!");
-}
-</script>
 <br>
 <br>
 <br>
