--- a/subscribe.html
+++ b/subscribe.html
@@ -38,7 +38,12 @@ function validateForm() {
     <h1><center>Type in your personal information to subscribe</center></h1>
 <form name="myForm" action="/action_page_post.php"
 onsubmit="return validateForm()" method="post">
-Name: <input type="text" name="fname">
+First Name : <input type="text" name="fname">
+    <br>
+    Last Name : <input type="text" name="lname">
+    <br>
+    E-mail Address : <input type="text" name="fname">
+    <br>
 <input type="submit" value="Submit">
 </form>
 
