--- a/subscribe.html
+++ b/subscribe.html
@@ -30,7 +30,9 @@ function validateForm() {
     if (x == "") {
         alert("E-mail address must be filled out");
         return false;
-    }
+    } else {
+        alert("Thank you for subscribing to our newsletter!");
+}
 }
 </script>
 </head>
@@ -44,7 +46,7 @@ First Name : <input type="text" name="fname">
     Last Name : <input type="text" name="lname">
     <br>
     <br>
-    E-mail Address** : <input type="text" name="email">
+    E-mail Address* : <input type="text" name="email">
     <br>
     <br>
     <br>
