--- a/subscribe.html
+++ b/subscribe.html
@@ -31,7 +31,8 @@ function validateForm() {
         alert("E-mail address must be filled out");
         return false;
     } else {
-        alert("Thank you for subscribing to our newsletter!");
+        function myFunction() {
+    alert("Thank you for subscribing to our newsletter!");
 }
 }
 </script>
