--- a/subscribe.html
+++ b/subscribe.html
@@ -47,7 +47,7 @@ First Name : <input type="text" name="fname">
     Last Name : <input type="text" name="lname">
     <br>
     <br>
-    E-mail Address* : <input type="text" name="email">
+    E-mail Address************ : <input type="text" name="email">
     <br>
     <br>
     <br>
