--- a/subscribe.html
+++ b/subscribe.html
@@ -47,6 +47,10 @@
     </div>
 
 <script>
+    var x = document.forms["myForm"]["email"].value;
+    if (x == "") {
+        alert("E-mail address must be filled out");
+    } else {
 function myFunction() {
     alert("Thank you for subscribing to our newsletter!");
 }
