--- a/subscribe.html
+++ b/subscribe.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <style>
-        #mand {
+        p {
+            font-family: "Bodoni MT";
+        }
+       span {
             color: red;
         }
         h1 {
@@ -41,10 +44,12 @@
 <input type="text" name="lastname">
 <br>
 <br>
-        <h3>E-mail address <p id="mand">**</p> :</h3>
+        <h3>E-mail address<span>**<span> :</h3>
 <input type="text" name"email">
 <br>
-        All (**) fields are mandatory
+<br>
+            <p>All (**) fields are mandatory</p>
+<br>
 <br>
 
 <button class="sub" onclick="myFunction()">Subscribe</button>
