--- a/subscribe.html
+++ b/subscribe.html
@@ -44,7 +44,7 @@
 <input type="text" name="lastname">
 <br>
 <br>
-        <h3>E-mail address<span>**<span> :</h3>
+        <h3>E-mail address<span>**</span> :</h3>
 <input type="text" name"email">
 <br>
 <br>
