--- a/subscribe.html
+++ b/subscribe.html
@@ -33,6 +33,14 @@
    
 </head>
 <body background="http://img.as-creation.com/app/items/s/935455.jpg">
+    <script>
+      function goBack() {
+        window.history.back();
+      }
+    </script>
+
+    <button onclick="goBack()">Home</button>
+
     <h1><center>Type in your personal information to subscribe</center></h1>
 <form>
     <div class="form">
@@ -66,13 +74,6 @@ function myFunction() {
 <br>
 <br>
 
-<script>
-      function goBack() {
-        window.history.back();
-      }
-    </script>
-
-    <button onclick="goBack()">Back to the homepage</button>
 
 </body>
 </html>
