--- a/subscribe.html
+++ b/subscribe.html
@@ -2,6 +2,27 @@
 <html>
 <head>
     <style>
+            .btn {
+  background: #faf6e6;
+  background-image: -webkit-linear-gradient(top, #faf6e6, #f5e9ce);
+  background-image: -moz-linear-gradient(top, #faf6e6, #f5e9ce);
+  background-image: -ms-linear-gradient(top, #faf6e6, #f5e9ce);
+  background-image: -o-linear-gradient(top, #faf6e6, #f5e9ce);
+  background-image: linear-gradient(to bottom, #faf6e6, #f5e9ce);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #665a46;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  border: solid #0f161a 3px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  text-decoration: none;
+}
         p {
             font-family: "Bodoni MT";
         }
@@ -39,7 +60,7 @@
       }
     </script>
 
-    <button onclick="goBack()">Home</button>
+    <button class="btn" onclick="goBack()">Home</button>
 
     <h1><center>Type in your personal information to subscribe</center></h1>
 <form>
