--- a/young_boys.html
+++ b/young_boys.html
@@ -55,7 +55,7 @@
       }
     </script>
 
-    <button class="btn" onclick="goBack()">Go Back</button>
+    <button class="btn" onclick="goBack()">Home</button>
   
     <h1 id="wo_dr"><center>Boys Junior Clothing</center></h1>
     
