--- a/women_dresses.html
+++ b/women_dresses.html
@@ -54,7 +54,7 @@
       }
     </script>
 
-    <button class="btn" onclick="goBack()">Go Back</button>
+    <button class="btn" onclick="goBack()">Home</button>
   
 
     <h1 id="wo_dr"><center>Women's Dresses</center></h1>
