--- a/men_trousers.html
+++ b/men_trousers.html
@@ -55,7 +55,7 @@
       }
     </script>
 
-    <button class="btn" onclick="goBack()">Go Back</button>
+    <button class="btn" onclick="goBack()">Home</button>
   
     <h1 id="wo_dr"><center>Men's Trousers & Jeans</center></h1>
     
