--- a/hc_vases.html
+++ b/hc_vases.html
@@ -55,7 +55,7 @@
       }
     </script>
 
-    <button class="btn" onclick="goBack()">Go Back</button>
+    <button class="btn" onclick="goBack()">Home</button>
     <h1 id="wo_dr"><center>Vases</center></h1>
     
     <h2>Click on an image to add the item to your wishlist</h2>
