--- a/hc_bowls.html
+++ b/hc_bowls.html
@@ -57,7 +57,7 @@
       }
     </script>
 
-    <button class="btn" onclick="goBack()">Go Back</button>
+    <button class="btn" onclick="goBack()">Home</button>
     <h1 id="wo_dr"><center>Bowls & Trays</center></h1>
     
     <h2>Click on an image to add the item to your wishlist</h2>
